--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "films-browser",
+  "name": "movies-browser",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jacob-jk.github.io/films-browser/",
+  "homepage": "https://jacob-jk.github.io/movies/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "redux-saga": "^1.3.0",
     "styled-components": "^6.1.13",
     "web-vitals": "^2.1.4"
   },
